--- a/aula01-react/app.json
+++ b/aula01-react/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "app-ui",
-    "slug": "app-ui",
+    "name": "CoffeeApp",
+    "slug": "CoffeeApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,13 +15,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIndentifier":"com.tiagobraga.cafezinho"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "packege":"com.tiagobraga.cafezinho"
     },
     "web": {
       "favicon": "./assets/favicon.png"
