--- a/aula01-react/package.json
+++ b/aula01-react/package.json
@@ -28,7 +28,11 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "13.4.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "expo-router": "^1.0.0",
+    "expo-linking": "~4.0.1",
+    "expo-constants": "~14.2.1",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
